{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 216,
  "lineage": "b793c6da-0cfd-3156-62e1-fc5019f4c355",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "workers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085925f297f89fce1",
            "arn": "arn:aws:ec2:us-east-1:851679981849:instance/i-0d3b678f5da723e47",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3b678f5da723e47",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default_pair_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09f6a54c782a7d05f",
            "private_dns": "ip-10-0-203-49.ec2.internal",
            "private_ip": "10.0.203.49",
            "public_dns": "ec2-3-85-162-123.compute-1.amazonaws.com",
            "public_ip": "3.85.162.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-034c03de5f352e917",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-031c5d6604aeffc61",
            "tags": {
              "Name": "worker0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-081f5ad4b8dd2a0b5"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_pair_key",
            "aws_security_group.allow_all_traffic",
            "aws_subnet.subnet_for_cluster",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851679981849:internet-gateway/igw-02e52dc6a51785efa",
            "id": "igw-02e52dc6a51785efa",
            "owner_id": "851679981849",
            "vpc_id": "vpc-0bd062daa3b47129f"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-public-crt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-055c311f470131be0",
            "owner_id": "851679981849",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e52dc6a51785efa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0bd062daa3b47129f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a38f4a8445e93660",
            "route_table_id": "rtb-055c311f470131be0",
            "subnet_id": "subnet-031c5d6604aeffc61"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-public-crt",
            "aws_subnet.subnet_for_cluster",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all_traffic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851679981849:security-group/sg-081f5ad4b8dd2a0b5",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081f5ad4b8dd2a0b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "80",
            "name_prefix": null,
            "owner_id": "851679981849",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0bd062daa3b47129f"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_for_cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851679981849:subnet/subnet-031c5d6604aeffc61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/16",
            "id": "subnet-031c5d6604aeffc61",
            "map_public_ip_on_launch": true,
            "owner_id": "851679981849",
            "tags": {
              "Name": "Subnet for Webservers"
            },
            "vpc_id": "vpc-0bd062daa3b47129f"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851679981849:vpc/vpc-0bd062daa3b47129f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06d7f915b1fbb11f7",
            "default_route_table_id": "rtb-06a791d778ae74381",
            "default_security_group_id": "sg-04971a12dbcd89a75",
            "dhcp_options_id": "dopt-9977b4e3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bd062daa3b47129f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06a791d778ae74381",
            "owner_id": "851679981849"
          }
        }
      ]
    }
  ]
}